# piranha

./: .gitignore  AUTHORS  CMakeLists.txt  Changelog  Doxyfile  FAQ  MAINTAINERS  PLATFORMS  THANKS  TODO  TODO.txt  current_release  do_release.sh  previous_release  updtaelist.txt  version_info_linux.sh
pyranha/: CMakeLists.txt  __impl.py  __init__.py  __init__.py.global  __init__.py.template  args_tuple.h  boost_python_container_conversions..old.h  boost_python_container_conversions.h  boost_python_p_exceptions.h  cf_key_bindings.h  commons.h  detail.py  exceptions.h  global.__init__.py  mp_classes.h  pyranha.h  series_instantiations.h  stl_containers.h  template.__init__.py  template.global.__init__.py
pyranha/Celmec/: CMakeLists.txt  __init__.py  constant_thrust.py  detail.py  low_thrust.py
pyranha/Cfs/: Cfs.cpp
pyranha/Cfsc/: Cfsc.cpp
pyranha/Core/: CMakeLists.txt  Core.cpp  __init__.py  impl.py
pyranha/Dfs/: CMakeLists.txt  Dfs.cpp
pyranha/Dpoly/: CMakeLists.txt  Dpoly.cpp
pyranha/Dps/: CMakeLists.txt  Dps.cpp
pyranha/Dqps/: CMakeLists.txt  Dqps.cpp
pyranha/Fs/: CMakeLists.txt  Fs.cpp
pyranha/Fsc/: Fsc.cpp
pyranha/Gsp/: CMakeLists.txt  Gsp.cpp
pyranha/Gspc/: CMakeLists.txt  Gspc.cpp
pyranha/Gui/: CMakeLists.txt  __init__.py  __panelWidget.py  __panelWidget.ui  __resources.qrc  main_window.py  main_window.ui  panel_widget.py  panel_widget.ui  series_draw_area.py
pyranha/Lnp/: CMakeLists.txt  Lnp.cpp
pyranha/Lnpc/: CMakeLists.txt  Lnpc.cpp
pyranha/Math/: CMakeLists.txt  Math.cpp  __init__.py
pyranha/Mpfs/: Mpfs.cpp
pyranha/Mpfsc/: CMakeLists.txt  Mpfsc.cpp
pyranha/Np/: CMakeLists.txt  Np.cpp
pyranha/Npc/: CMakeLists.txt  Npc.cpp
pyranha/Qpoly/: CMakeLists.txt  Qpoly.cpp
pyranha/Qps/: CMakeLists.txt  Qps.cpp
pyranha/Qqpoly/: CMakeLists.txt  Qqpoly.cpp
pyranha/Qqps/: CMakeLists.txt  Qqps.cpp
pyranha/Sp/: CMakeLists.txt  Sp.cpp
pyranha/Spc/: Spc.cpp
pyranha/Test/: CMakeLists.txt  __init__.py  detail.py
pyranha/Truncators/: CMakeLists.txt  Truncators.cpp  __init__.py  detail.py
pyranha/Zpoly/: CMakeLists.txt  Zpoly.cpp
pyranha/boost_python/: CMakeLists.txt
pyranha/examples/: alt_besselJ.py
src/: CMakeLists.txt  arg_manager.cpp  arg_manager.h  astro.cpp  astro.h  base_container.h  base_degree_truncator.cpp  base_expo_truncator.cpp  base_ipoly.h  base_norm_truncator.cpp  base_polynomial.h  base_pseries.cpp  base_pseries.h  base_pseries_def.h  base_pseries_hooks.h  base_pseries_io.h  base_pseries_manip.h  base_pseries_math.h  base_pseries_probe.h  base_term.h  base_trig_array.h  buffer.cpp  common_typedefs.h  compile_switches.cpp  complex_toolbox.h  config.h  degree_truncator.cpp  differential_toolbox.h  double_cf.h  expo_truncatable_series.cpp  fnp.h  gsp.h  gspc.h  hash_set_hm.h  imonomial.h  integral_npow_cache.h  ipoly.h  keplerian_processor.h  light_term.h  lnp.h  (+80 more)
src/base_classes/: base_ipoly.h  base_polynomial.h  base_pseries.h  base_pseries_ctors.h  base_pseries_def.h  base_pseries_getters_and_setters.h  base_pseries_hooks.h  base_pseries_io.h  base_pseries_manip.h  base_pseries_math.h  base_pseries_probe.h  base_term.h  base_trig_array.h  numerical_container.h
src/bits/: arg_manager.h  astro.h  buffer.h  common_typedefs.h  compile_switches.h  config.h  generic_fs.h  hash_set_hm.h  imonomial.h  integral_npow_cache.h  ipoly.h  keplerian_processor.h  light_term.h  math.h  memory.h  mic_hm.h  mm_malloc.h  monomial_gmp_array.h  norm_index.h  p_assert.h  p_exceptions.h  packed_int_array.h  phase_list.h  piranha_gsl.h  piranha_malloc.h  piranha_tbb.h  piranha_vectorization.h  platform_switches.h  pool_allocator.h  prectest.h  progress_display.h  ps.h  pseries_gl_rep.h  psymbol.h  range_evaluator.h  settings_manager.h  stats.h  stream_manager.h  symbol_limiter.h  trig_evaluator.h  (+3 more)
src/boost_thread/: tss_null.cpp
src/coefficients/: double_cf.h  mpf_cf.h
src/core/: arg_manager.h  arg_manager_mp.h  astro.h  atomic_counter.h  atomic_counter_gcc_41.h  atomic_counter_generic.h  buffer.h  chained_hash_set.h  coded_hash_table.h  coded_series_hash_table.h  common_functors.h  common_typedefs.h  compile_switches.h  concepts.h  config.h  cuckoo_hash_set.h  exceptions.h  int_power_cache.h  integer_typedefs.h  is_sorted.h  lambdas.h  math.h  memory.h  mm_malloc.h  mp.h  mpq.h  none.h  ntuple.h  null_type.h  p_assert.h  p_exceptions.h  piranha_malloc.h  piranha_tbb.h  piranha_vectorization.h  platform_switches.h  pool_allocator.h  portable_memalign.h  power_cache.h  prectest.h  progress_display.h  (+15 more)
src/hoard/: VERSION.h  hoard.h  hoardmanager.h  hoardsuperblockheader.h  libhoard.cpp  tlab.h  userealtls.cpp  winhoard.cpp
src/keplerian_processor/: keplerian_processor.cpp  keplerian_processor.h
src/manipulators/: cfs.h  cfsc.h  dfs.h  dpoly.h  dps.h  dqps.h  ffs.h  ffsc.h  fnp.h  fs.h  fsc.h  lnp.h  lnpc.h  mpfs.h  mpfsc.h  np.h  npc.h  qpoly.h  qps.h  qqpoly.h  qqps.h  sp.h  spc.h  zpoly.h
src/old_core/: compile_switches.h  math.h  unordered_set_hm.h
src/tass17/: tass17.cpp  tass17.h
src/tbb/: concurrent_vector.cpp  task.cpp  tbb_version.h
src/terms/: simple_term.h
src/toolboxes/: complex_toolbox.h  differential_toolbox.h  fourier_multiplication_toolbox.h  math_toolbox.h  (+3 more)
tests/: CMakeLists.txt  binomial_20000.cpp  celmec_test_01.cpp  complexp_test.cpp  dfs_mult_01.cpp  dfs_mult_02.cpp  elp3.dfs  fateman_poly_test1.cpp  fateman_poly_test2.cpp  fateman_test.cpp  fateman_test.dpoly  gastest_elp3.cpp  gastest_elp3_dynamic.cpp  gastest_elp3_dynamic_ext.cpp  gastest_elp3_ext.cpp  gastest_elp3_simd.cpp  gastest_poly.cpp  gastineau_fs_test1.cpp  mixed_sin_cos_test.cpp  pearce_sparse1.dpoly  pearce_sparse2.dpoly  pearce_sparse3.dpoly  pearce_sparse4.dpoly  pearce_sparse_poly_test1.cpp  pearce_sparse_poly_test2.cpp  ra_test.cpp  sf_tests_01.cpp  small_poly_test.cpp  small_poly_test.dpoly  sub_tests.cpp  tass_r6_test.cpp  test_BaseSeries.cpp  test_FourierSeries.cpp  test_FourierSeriesTerm.cpp  test_Monomial.cpp  test_NamedSeries.cpp  test_NumericalContainer.cpp  test_PoissonSeries.cpp  test_Polynomial.cpp  test_base_term.cpp  (+20 more)
(+563 files in other folders)
