SET(PYRANHA_INSTALL_PATH ${PYTHON_MODULES_PATH}/pyranha)

MACRO(PYTHON_CPPMODULE arg1)
  SET_TARGET_PROPERTIES(${arg1} PROPERTIES PREFIX "")
  IF(PYDEXTENSION)
    SET_TARGET_PROPERTIES(${arg1} PROPERTIES SUFFIX ".pyd")
  ENDIF(PYDEXTENSION)
  TARGET_LINK_LIBRARIES(${arg1} ${MANDATORY_LIBRARIES} ${PYTHON_LIBRARIES} ${ARGN})
  STRING(REGEX REPLACE "^_" "" DIR_ARG ${arg1})
  INSTALL(TARGETS ${arg1}
    RUNTIME DESTINATION ${PYRANHA_INSTALL_PATH}/${DIR_ARG}
    LIBRARY DESTINATION ${PYRANHA_INSTALL_PATH}/${DIR_ARG}
  )
ENDMACRO(PYTHON_CPPMODULE)

MACRO(PYRANHA_MANIPULATOR_INIT arg1)
  STRING(REGEX REPLACE "^_" "" DIR_ARG ${arg1})
  SET(MODULE_NAME ${arg1})
  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../template.__init__.py
    ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py)
  INSTALL(FILES __init__.py DESTINATION ${PYRANHA_INSTALL_PATH}/${DIR_ARG})
ENDMACRO(PYRANHA_MANIPULATOR_INIT)

MACRO(PYRANHA_MANIPULATOR arg1)
  PYTHON_CPPMODULE(${arg1})
  PYRANHA_MANIPULATOR_INIT(${arg1})
ENDMACRO(PYRANHA_MANIPULATOR)

# Mandatory targets
SET(MODULE_LIST \ \"Core\",\ )
ADD_SUBDIRECTORY(Core)

# Optional targets
IF(BUILD_PYRANHA_DPOLY)
  SET(MODULE_LIST ${MODULE_LIST}"Dpoly",\ )
  ADD_SUBDIRECTORY(Dpoly)
ENDIF(BUILD_PYRANHA_DPOLY)

IF(BUILD_PYRANHA_ZPOLY)
  SET(MODULE_LIST ${MODULE_LIST}"Zpoly",\ )
  ADD_SUBDIRECTORY(Zpoly)
ENDIF(BUILD_PYRANHA_ZPOLY)

IF(BUILD_PYRANHA_DFS)
  SET(MODULE_LIST ${MODULE_LIST}"Dfs",\ )
  ADD_SUBDIRECTORY(Dfs)
ENDIF(BUILD_PYRANHA_DFS)

IF(BUILD_PYRANHA_DPS)
  SET(MODULE_LIST ${MODULE_LIST}"Dps",\ )
  ADD_SUBDIRECTORY(Dps)
ENDIF(BUILD_PYRANHA_DPS)

IF(BUILD_PYRANHA_QPS)
  SET(MODULE_LIST ${MODULE_LIST}"Qps",\ )
  ADD_SUBDIRECTORY(Qps)
ENDIF(BUILD_PYRANHA_QPS)

IF(BUILD_PYRANHA_GUI)
  SET(MODULE_LIST ${MODULE_LIST}"Gui",\ )
  ADD_SUBDIRECTORY(Gui)
ENDIF(BUILD_PYRANHA_GUI)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/global.__init__.py
  ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py)

INSTALL(FILES __init__.py DESTINATION ${PYRANHA_INSTALL_PATH})
